remake navbar, fix collapse and icons

--- a/src/client/styles/content/_navigation.sass
+++ b/src/client/styles/content/_navigation.sass
@@ -22,6 +22,8 @@
 
 .links
   color: white !important
+  &:hover
+    border: none !important
 
 .new
   color: white !important
